# cargo-gen

./: Cargo.toml  TODO.md
members/cargo-gen-helpers/: Cargo.toml  cargo_generators.yaml  cargo_generators.yml
members/cargo-gen-helpers/src/: gen.rs  gen_trait.rs  helpers.rs  lib.rs  test_helpers.rs
members/cargo-gen-helpers/templates/: cargo_generators.yaml  genfile.rs  testfile.rs
members/cargo-gen-helpers/tests/: api.rs  gen.rs  test_helpers.rs
src/: cmd_args.rs  finder.rs  gen.rs  gen_trait.rs  lib.rs  runner.rs  test_helpers.rs
templates/: genfile.rs  main.rs.tmpl  testfile.rs
tests/: cargo-gen-cli.rs  gen.rs  test_helpers.rs
