[package]
name = "cargo-gen"
version = "0.0.1"
description = "A cargo generator subcommand"
authors = ["Linas Juškevičius <linas@prodigito.lt>"]
license = "MIT"

[dependencies]
cargo-gen-helpers = { path = "members/cargo-gen-helpers" }
clap = "2.27"

[dev-dependencies]
assert_cli = "0.5"

[workspace]
