[package]
name = "cargo-gen-helpers"
version = "0.0.1"
authors = ["Linas Juškevičius <linas@prodigito.lt>"]

[lib]
doctest = false

[dependencies]
askama = "0.5"
error-chain = "0.11"
cargo = "0.22"
tempdir = "0.3"
clap = { version = "2.31", features = ["yaml"] }
yaml-rust = "0.4"

[dev-dependencies]
tempfile = "2.2"

[build-dependencies]
askama = "0.5"
